name:              play-space-online
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          Create and share PlaySpace effects
description:       Create and share PlaySpace effects
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://playspaceonline.com

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Foundation
                     Model
                     Settings
                     StaticFiles
                     Handler.Root
                     Handler.Effect
                     Handler.About
                     Handler.Compile
                     Handler.UnsafeText

executable         play-space-online
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/play-space-online.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.8     && < 0.9
                 , yesod-auth
                 , yesod-static
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-sqlite >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
                 , blaze-html
                 , filepath
                 , plugins
                 , shady-gen
                 , shady-graphics
                 , vector-space
                 , Boolean
               
