name:              play-space-online
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          Create and share PlaySpace effects
description:       Create and share PlaySpace effects
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://playspaceonline.com

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Foundation
                     Model
                     Settings
                     StaticFiles
                     Handler.Root
                     Handler.Effect
                     Handler.About
                     Handler.Compile
                     Handler.UnsafeText

executable         play-space-online
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/play-space-online.hs
    hs-source-dirs: ., config

    build-depends: base                >= 4       && < 5
                 , yesod               >= 0.8     && < 0.9
                 , yesod-auth          >= 0.4     && < 0.5
                 , yesod-static        >= 0.1     && < 0.2
                 , mime-mail           >= 0.3     && < 0.4
                 , wai-extra           >= 0.4     && < 0.5
                 , directory           >= 1       && < 2
                 , bytestring          >= 0.9     && < 1
                 , text                >= 0.11    && < 0.12
                 , persistent          >= 0.5     && < 0.6
                 , persistent-template >= 0.5     && < 0.6
                 , persistent-sqlite   >= 0.5     && < 0.6
                 , template-haskell    >= 2.4     && < 2.5
                 , hamlet              >= 0.8     && < 0.9
                 , web-routes          >= 0.24    && < 0.25
                 , hjsmin              >= 0.0.14
                 , transformers        >= 0.2     && < 0.3
                 , warp                >= 0.4     && < 0.5
                 , blaze-builder       >= 0.3     && < 0.4
                 , blaze-html          >= 0.4     && < 0.5
                 , filepath            >= 1.1     && < 1.2
                 , plugins             >= 1.5     && < 1.6
                 , shady-gen           >= 0.5     && < 0.6
                 , shady-graphics      >= 0.5     && < 0.6
                 , vector-space        >= 0.7     && < 0.8
                 , Boolean             >= 0.0.1
               
